add TESTING_ENABLED to cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 3.0)
 
 set (CMAKE_CXX_STANDARD 11)
 
+set (TESTIN_ENABLED 0 CACHE STRING "Enable Testin build")
+
 if ("${TESTIN_ENABLED}" EQUAL "1")
   add_definitions(-DTESTIN_ENABLED=1)
 endif()
